Added OutputCaching example

--- a/Mvc3.Demo/Mvc3.Demo.csproj
+++ b/Mvc3.Demo/Mvc3.Demo.csproj
@@ -120,7 +120,7 @@
     <Content Include="Views\Home\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Home\GettingStarted.cshtml" />
+    <Content Include="Views\Home\OutputCaching.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
