--- a/Externals/BoneSoft.CSS/Externals.CSSParser.csproj
+++ b/Externals/BoneSoft.CSS/Externals.CSSParser.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
+    <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CSSParser.cs" />
